[package]
name = "rustlens"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustlens"
crate-type = ["lib", "cdylib"]

[dependencies]
ellip = "1.0.4"
interp = "2.1.2"
numdiff = "0.4.0"
pyo3 = "0.28.1"
quadrature = "0.1.2"
rayon = "1.11.0"
