[package]
name = "rustlens"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustlens"
crate-type = ["lib", "cdylib"]

[dependencies]
ellip = "1.1.0"
interp = "2.1.2"
numdiff = "0.7.3"
pyo3 = "0.28.3"
quadrature = "0.1.2"
rayon = "1.12.0"
