[package]
name = "rustlens"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustlens"
crate-type = ["lib", "cdylib"]

[dependencies]
ellip = "1.1.0"
interp = "2.1.2"
numdiff = "0.8.0"
pyo3 = "0.29.0"
quadrature = "0.1.2"
rayon = "1.12.0"
